--- a/index.html
+++ b/index.html
@@ -11,19 +11,28 @@
 
 </head>
 <body>
+  <div class="logo"><img src="/images/logo.svg" alt=""></div>
+  <div class="general-container">
 
-  We're coming soon
+<div class="left">
+  <h1>
+    We're <span>coming soon</span>
+  </h1>
 
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
+  <p>Hello fellow shoppers! We're currently building our new fashion store. 
+    Add your email below to stay up-to-date with announcements and our launch deals.</p>
 
-  Email Address
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+<div class="form">
+  <input type="email" placeholder="Email Address" class="form-input"> <button class="button">></button>
+</div>
+</div>
+<div class="right"></div>
+</div>
+    <!-- <footer>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Your Name Here</a>.
+      </p>
+    </footer> -->
 </body>
 </html>
