--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
     Add your email below to stay up-to-date with announcements and our launch deals.</p>
 
 <div class="form">
-  <input type="email" placeholder="Email Address" class="form-input"> <button class="button">></button>
+  <input type="email" placeholder="Email Address" class="form-input"> 
+  <button class="button"><img src="/images/icon-arrow.svg" alt="arrow submit"></button>
 </div>
 </div>
-<div class="right"></div>
+<div class="right">
+</div>
 </div>
     <!-- <footer>
       <p class="attribution">
